# Ragdoll_sample

./: CMakeLists.txt  README.md  build_install_with_minGW.bat
Media/materials/scripts/: Examples.material
conf_files/: plugins_d.cfg
docs/: скелетная анимация и ragdoll.odt
src/: BaseApplication.h  OgreBulletUtils.h  RagdollSample.cpp
